--- a/administrador/templates/administrador/listar_organizadores.html
+++ b/administrador/templates/administrador/listar_organizadores.html
@@ -54,14 +54,14 @@
                                 <span>{{ organizador.user.username }}</span>
                             </td>
                             <td>
-                                <a href="#" class="link" title="Editar">
+                                <a href="{% url 'administrador:editar-organizador' pk=organizador.pk %}" class="link" title="Editar">
                                 <span class="icon is-small is-left has-text-dark">
                                     <i class="fas fa-edit"></i>
                                 </span>
                                 </a>
                             </td>
                             <td>
-                                <a href="#" class="link" title="Excluir"
+                                <a href="{% url 'administrador:excluir-organizador' pk=organizador.pk %}" class="link" title="Excluir"
                                    onclick="return get_confirmation('Deseja realmente excluir {{ organizador }}?')">
                                 <span class="icon is-small is-left has-text-danger">
                                     <i class="fas fa-trash"></i>
