implementando gerenciamento de eventos

--- a/core/templates/core/base.html
+++ b/core/templates/core/base.html
@@ -43,6 +43,9 @@
                                 <a class="navbar-item" href="{% url 'administrador:listar-organizadores' %}">
                                     Organizadores
                                 </a>
+                                <a class="navbar-item" href="{% url 'administrador:listar-eventos' %}">
+                                    Eventos
+                                </a>
                             {% else %}
                                 <a class="navbar-item" href="{% url 'organizador:perfil' %}">
                                     Perfil
