--- a/eventos/templates/eventos/editar-palestrante.html
+++ b/eventos/templates/eventos/editar-palestrante.html
@@ -93,20 +93,69 @@
 
                     <div class="field is-horizontal">
                         <div class="field-label is-normal">
-                            <label class="label">Link</label>
+                            <label class="label">Instagram</label>
                         </div>
                         <div class="field-body">
                             <div class="field">
                                 <p class="control is-expanded has-icons-left">
-                                    {% render_field p_form.link type="url" class="input" placeholder="Instagram, Facebook, Homepage..." %}
+                                    {% render_field p_form.instagram type="url" class="input" placeholder="Instagram, Facebook, Homepage..." %}
                                     {#                                    <input class="input" type="url" placeholder="Instagram, Facebook, Homepage...">#}
                                     <span class="icon is-small is-left">
-                                        <i class="fas fa-link"></i>
+                                        <i class="fab fa-instagram"></i>
                                     </span>
                                 </p>
                             </div>
                         </div>
                     </div>
+                    <div class="field is-horizontal">
+                        <div class="field-label is-normal">
+                            <label class="label">Linkedin</label>
+                        </div>
+                        <div class="field-body">
+                            <div class="field">
+                                <p class="control is-expanded has-icons-left">
+                                    {% render_field p_form.linkedin type="url" class="input" placeholder="Instagram, Facebook, Homepage..." %}
+                                    {#                                    <input class="input" type="url" placeholder="Instagram, Facebook, Homepage...">#}
+                                    <span class="icon is-small is-left">
+                                        <i class="fab fa-linkedin"></i>
+                                    </span>
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="field is-horizontal">
+                        <div class="field-label is-normal">
+                            <label class="label">Twitter</label>
+                        </div>
+                        <div class="field-body">
+                            <div class="field">
+                                <p class="control is-expanded has-icons-left">
+                                    {% render_field p_form.twitter type="url" class="input" placeholder="Instagram, Facebook, Homepage..." %}
+                                    {#                                    <input class="input" type="url" placeholder="Instagram, Facebook, Homepage...">#}
+                                    <span class="icon is-small is-left">
+                                        <i class="fab fa-twitter"></i>
+                                    </span>
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="field is-horizontal">
+                        <div class="field-label is-normal">
+                            <label class="label">Email</label>
+                        </div>
+                        <div class="field-body">
+                            <div class="field">
+                                <p class="control is-expanded has-icons-left">
+                                    {% render_field p_form.email type="url" class="input" placeholder="Instagram, Facebook, Homepage..." %}
+                                    {#                                    <input class="input" type="url" placeholder="Instagram, Facebook, Homepage...">#}
+                                    <span class="icon is-small is-left">
+                                        <i class="fas fa-envelope"></i>
+                                    </span>
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+
 
                     <div class="field is-horizontal">
                         <div class="field-label is-normal">
